--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <h1>hello, world!</h1>
 <p1> je m'appelle mohamet</p1>                                    <p1> 1 Allée Jean de la Bruyère</p1>
+h1{
+font-weight: normal;
+color: red;
+}
