--- a/index.html
+++ b/index.html
@@ -2,3 +2,97 @@
 <p1> je m'appelle mohamet</p1>                                    <p1> 1 Allée Jean de la Bruyère</p1>
 Je suis titulaire d'un bac+2 en Anglais
 
+
+A- IDENTIFICATION	
+Nom
+Prénom
+Date de naissance
+Téléphone
+Email
+MENHEIM
+Mohamet Aly
+12/04/1986
+06.50.96.06.40
+humanbeing28@gmail.com
+
+
+B- HISTORIQUE CARRIERE	
+Entreprise : Nom
+Poste occupé
+Date d’entrée
+Date de sortie
+Motifs du départ
+Société informelle
+Effectuer la vérification des entrées et sorties matérielles et leur saisie sur la base de données.
+Février 2013
+Avril 2013
+Fin de contrat (3mois)
+Quality Center
+Campagne de vente de produits en ligne
+Avril 2012
+Juin 2012
+Télévente
+(1mois)
+Essor technologie
+Technicienne de help desk en informatique
+Mai  2015
+Juillet 2015
+Fin de contrat (3mois)
+JC-MENARD CHOCOLATERIE DU PECQ
+Manutentionnaire-Agent de fabrication
+Novembre 2015
+Mars 2019
+Licenciement
+
+
+C- FORMATION
+Etudes
+Etablissement
+Diplôme obtenu ou niveau (préciser)
+Année
+Observations
+Etudes secondaires
+Lycée Mixte Maurice Delafosse
+Baccalauréat
+2008
+
+
+Etudes supérieures
+U.C.A.D (F.L.S.H)
+(Faculté des Lettres et Sciences Humaines)
+(ANGLAIS)
+Licence 3
+2013
+Contrainte d’arrêt d’études à ce niveau, sans l’obtention dudit diplôme
+Séminaire, Session perfectionnement, Stage professionnel
+Sicap
+
+
+Déc.2013 /Févr.2014
+Informatique
+(Réseaux-Télécoms)
+
+
+D- LANGUES
+Langue
+Parlée
+Lue
+Ecrite
+Anglais
+Moyen
+Bon
+Bon
+Espagnol
+Faible
+Bon
+Bon
+Français
+Bon
+Bon
+Bon
+
+AUTRES ACTIVITES : FREELANCE EN VENTE INFORMATIQUE / ENCADREMENT ELEVES
+
+CENTRES D'INTERETS : JOGGING, FOOT, LECTURE, JEUX, TV, BRICOLAGE
+
+
