--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 Je suis titulaire d'un bac+2 en Anglais
 
 
-A- IDENTIFICATION	
+<h1>A- IDENTIFICATION</h1>	
 Nom
 Prénom
 Date de naissance
@@ -16,7 +16,7 @@ Mohamet Aly
 humanbeing28@gmail.com
 
 
-B- HISTORIQUE CARRIERE	
+<h1>B- HISTORIQUE CARRIERE</h1>	
 Entreprise : Nom
 Poste occupé
 Date d’entrée
@@ -45,7 +45,7 @@ Mars 2019
 Licenciement
 
 
-C- FORMATION
+<h1>C- FORMATION</h1>
 Etudes
 Etablissement
 Diplôme obtenu ou niveau (préciser)
@@ -74,22 +74,6 @@ Informatique
 
 
 D- LANGUES
-Langue
-Parlée
-Lue
-Ecrite
-Anglais
-Moyen
-Bon
-Bon
-Espagnol
-Faible
-Bon
-Bon
-Français
-Bon
-Bon
-Bon
 
 AUTRES ACTIVITES : FREELANCE EN VENTE INFORMATIQUE / ENCADREMENT ELEVES
 
