--- a/index.html
+++ b/index.html
@@ -1,82 +1,42 @@
-<h1>CURRICULUM VITAE!</h1>
-<p1> je m'appelle mohamet</p1>                                    <p1> 1 Allée Jean de la Bruyère</p1>
-Je suis titulaire d'un bac+2 en Anglais
+<h1>CURRICULUM VITAE</h1>
 
 
 <h1>A- IDENTIFICATION</h1>	
-Nom
-Prénom
-Date de naissance
-Téléphone
-Email
+
 MENHEIM
 Mohamet Aly
 12/04/1986
+1 Allée Jean de la Bruyère
 06.50.96.06.40
 humanbeing28@gmail.com
 
 
 <h1>B- HISTORIQUE CARRIERE</h1>	
-Entreprise : Nom
-Poste occupé
-Date d’entrée
-Date de sortie
-Motifs du départ
-Société informelle
+
 Effectuer la vérification des entrées et sorties matérielles et leur saisie sur la base de données.
-Février 2013
-Avril 2013
-Fin de contrat (3mois)
-Quality Center
-Campagne de vente de produits en ligne
-Avril 2012
-Juin 2012
+
 Télévente
-(1mois)
-Essor technologie
+
 Technicienne de help desk en informatique
-Mai  2015
-Juillet 2015
-Fin de contrat (3mois)
-JC-MENARD CHOCOLATERIE DU PECQ
+
 Manutentionnaire-Agent de fabrication
-Novembre 2015
-Mars 2019
-Licenciement
 
 
 <h1>C- FORMATION</h1>
-Etudes
-Etablissement
-Diplôme obtenu ou niveau (préciser)
-Année
-Observations
-Etudes secondaires
-Lycée Mixte Maurice Delafosse
+
 Baccalauréat
 2008
 
 
 Etudes supérieures
-U.C.A.D (F.L.S.H)
+
 (Faculté des Lettres et Sciences Humaines)
-(ANGLAIS)
-Licence 3
-2013
-Contrainte d’arrêt d’études à ce niveau, sans l’obtention dudit diplôme
-Séminaire, Session perfectionnement, Stage professionnel
-Sicap
+(ANGLAIS) BAC+2
 
 
-Déc.2013 /Févr.2014
-Informatique
-(Réseaux-Télécoms)
 
+<h1>AUTRES ACTIVITES :</h1> FREELANCE EN VENTE INFORMATIQUE / ENCADREMENT ELEVES
 
-D- LANGUES
-
-AUTRES ACTIVITES : FREELANCE EN VENTE INFORMATIQUE / ENCADREMENT ELEVES
-
-CENTRES D'INTERETS : JOGGING, FOOT, LECTURE, JEUX, TV, BRICOLAGE
+<h1>CENTRES D'INTERETS :</h1> JOGGING, FOOT, LECTURE, JEUX, TV, BRICOLAGE
 
 
